--- a/KammeySolutions.html
+++ b/KammeySolutions.html
@@ -12,7 +12,7 @@
    	      <nav>
    	      <ul class="nav">	
    	         <li><a class="nav-link" href="KammeySolutions.html">Home</a></li>
-   	         <li><a class="nav-link" href="#">Mission<a></li>
+   	         <li><a class="nav-link" href="Mission.html">Mission<a></li>
    	         <li><a class="nav-link" href="#">Our Team<a></li>
    	         <li><a class="nav-link" href="#">What We've Been Up To<a></li>
    	         <li><a class="nav-link" href="#">Publications<a></li>
@@ -50,6 +50,8 @@
            
             </script>
         </div>
+
+        <hr>
 
         <div class="do">
           <div class="column">
