--- a/Mission.html
+++ b/Mission.html
@@ -13,7 +13,7 @@
    	      <ul class="nav">	
    	         <li><a class="nav-link" href="KammeySolutions.html">Home</a></li>
    	         <li><a class="nav-link" href="Mission.html">Mission<a></li>
-   	         <li><a class="nav-link" href="#">Our Team<a></li>
+   	         <li><a class="nav-link" href="OurTeam.html">Our Team<a></li>
    	         <li><a class="nav-link" href="#">What We've Been Up To<a></li>
    	         <li><a class="nav-link" href="#">Publications<a></li>
    	         <li><a class="nav-link" href="#">Contact Us<a></li>
@@ -32,10 +32,9 @@
    	 <p>Our Mission is to equip smallholder farmers with the tools they need to achieve food security and income generation, which will spur economic development by creating jobs within the agricultural value chain and off the farm, with the ultimate goal of enabling poor people to participate in a robust marketplace.</p>
 
    	 <p>Through empowering individuals at the grassroot levels in the various communities it operates in, KAMMEY Solutions, Inc. works towards reducing global hunger by means of integrated livestock-crop agriculture. Communities involved in the agricultural activities will also be supported in managing their health and environment through education and service provision strategies in sustainable institutions.</p>
-
    	</div>
 
-   	<hr>
+   	<hr width=73%>
 
    	<div class="bottom">
    		<h2>Rationale</h2>
