--- a/KammeySolutions.html
+++ b/KammeySolutions.html
@@ -13,7 +13,7 @@
    	      <ul class="nav">	
    	         <li><a class="nav-link" href="KammeySolutions.html">Home</a></li>
    	         <li><a class="nav-link" href="Mission.html">Mission<a></li>
-   	         <li><a class="nav-link" href="#">Our Team<a></li>
+   	         <li><a class="nav-link" href="OurTeam.html">Our Team<a></li>
    	         <li><a class="nav-link" href="#">What We've Been Up To<a></li>
    	         <li><a class="nav-link" href="#">Publications<a></li>
    	         <li><a class="nav-link" href="#">Contact Us<a></li>
@@ -50,8 +50,6 @@
            
             </script>
         </div>
-
-        <hr>
 
         <div class="do">
           <div class="column">
