--- a/KammeySolutions.html
+++ b/KammeySolutions.html
@@ -14,7 +14,7 @@
    	         <li><a class="nav-link" href="KammeySolutions.html">Home</a></li>
    	         <li><a class="nav-link" href="Mission.html">Mission<a></li>
    	         <li><a class="nav-link" href="OurTeam.html">Our Team<a></li>
-   	         <li><a class="nav-link" href="#">What We've Been Up To<a></li>
+   	         <li><a class="nav-link" href="#">Current Projects<a></li>
    	         <li><a class="nav-link" href="#">Publications<a></li>
    	         <li><a class="nav-link" href="#">Contact Us<a></li>
    	      </ul>
