--- a/Mission.html
+++ b/Mission.html
@@ -14,9 +14,9 @@
    	         <li><a class="nav-link" href="KammeySolutions.html">Home</a></li>
    	         <li><a class="nav-link" href="Mission.html">Mission<a></li>
    	         <li><a class="nav-link" href="OurTeam.html">Our Team<a></li>
-   	         <li><a class="nav-link" href="#">What We've Been Up To<a></li>
+   	         <li><a class="nav-link" href="#">Current Projects<a></li>
    	         <li><a class="nav-link" href="#">Publications<a></li>
-   	         <li><a class="nav-link" href="#">Contact Us<a></li>
+   	         <li><a class="nav-link" href="ContactUs.html">Contact Us<a></li>
    	      </ul>
    	      </nav>
    	    </div>
